hover overlap fixed

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -107,7 +107,7 @@
 			a {
 				color: #000;
 				text-decoration: none;
-				padding: 0.9rem;
+				padding: 0.8rem 1rem;
 
 				@media (max-width: 768px) {
 					padding: 0.5rem;
@@ -128,7 +128,7 @@
 				.sub-menu {
 					display: none;
 					position: absolute;
-					top: 37px;
+					top: 40px;
 					left: 0;
 					width: 10rem;
 					background-color: #e9e9e9;
